WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154143
[ES6] we have an incorrect syntax error when a callee of a function expression has the same name as a top-level lexical declaration
https://bugs.webkit.org/show_bug.cgi?id=154143
Summary
[ES6] we have an incorrect syntax error when a callee of a function expressio...
Saam Barati
Reported
2016-02-11 17:25:25 PST
``` (function foo() { const foo = 20; }); ``` is a syntax error but it shouldn't be.
Attachments
patch
(13.44 KB, patch)
2016-02-11 18:24 PST
,
Saam Barati
benjamin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(892.08 KB, application/zip)
2016-02-11 19:17 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-yosemite-wk2
(1.10 MB, application/zip)
2016-02-11 19:23 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews112 for mac-yosemite
(1.19 MB, application/zip)
2016-02-11 20:09 PST
,
Build Bot
no flags
Details
for landing
(13.99 KB, patch)
2016-02-12 19:08 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-02-11 18:24:06 PST
Created
attachment 271113
[details]
patch
Build Bot
Comment 2
2016-02-11 19:17:01 PST
Comment on
attachment 271113
[details]
patch
Attachment 271113
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/817189
New failing tests: streams/pipe-to.html streams/reference-implementation/pipe-through.html streams/brand-checks.html streams/reference-implementation/pipe-to-options.html
Build Bot
Comment 3
2016-02-11 19:17:04 PST
Created
attachment 271121
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4
2016-02-11 19:23:13 PST
Comment on
attachment 271113
[details]
patch
Attachment 271113
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/817196
New failing tests: streams/pipe-to.html streams/reference-implementation/pipe-through.html streams/brand-checks.html streams/reference-implementation/readable-stream-templated.html streams/reference-implementation/pipe-to-options.html
Build Bot
Comment 5
2016-02-11 19:23:16 PST
Created
attachment 271123
[details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-02-11 20:09:39 PST
Comment on
attachment 271113
[details]
patch
Attachment 271113
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/817334
New failing tests: streams/pipe-to.html streams/reference-implementation/pipe-through.html streams/brand-checks.html streams/reference-implementation/readable-stream-templated.html streams/reference-implementation/pipe-to-options.html
Build Bot
Comment 7
2016-02-11 20:09:43 PST
Created
attachment 271125
[details]
Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Saam Barati
Comment 8
2016-02-12 19:08:45 PST
Created
attachment 271259
[details]
for landing
WebKit Commit Bot
Comment 9
2016-02-12 20:52:02 PST
Comment on
attachment 271259
[details]
for landing Clearing flags on attachment: 271259 Committed
r196545
: <
http://trac.webkit.org/changeset/196545
>
WebKit Commit Bot
Comment 10
2016-02-12 20:52:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug