[ES6] we have an incorrect syntax error when a callee of a function expression has the same name as a top-level lexical declaration https://bugs.webkit.org/show_bug.cgi?id=154143

Reviewed by Benjamin Poulain.

Source/JavaScriptCore:

We were raising syntax errors on the following type of programs when
we shouldn't have been.
```
(function foo() { const foo = 20; });
```

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseFunctionInfo):
* parser/Parser.h:
(JSC::Scope::computeLexicallyCapturedVariablesAndPurgeCandidates):
(JSC::Scope::declareCallee):
(JSC::Scope::declareVariable):
(JSC::Scope::hasDeclaredVariable):
(JSC::Scope::hasLexicallyDeclaredVariable):
(JSC::Scope::hasDeclaredParameter):
(JSC::Scope::declareWrite):
(JSC::Scope::getCapturedVars):

LayoutTests:

* js/basic-strict-mode-expected.txt:
* js/let-syntax-expected.txt:
* js/script-tests/let-syntax.js:


Canonical link: https://commits.webkit.org/172321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196545 268f45cc-cd09-0410-ab3c-d52691b4dbfc